@startuml
hide circle
hide methods
skinparam linetype ortho
skinparam classAttributeIconSize 0

entity "users" as USERS {
  *id : UUID
  --
  email : VARCHAR
  password_hash : VARCHAR
  first_name : VARCHAR
  last_name : VARCHAR
  display_name : VARCHAR
  phone : VARCHAR
  profile_photo_url : VARCHAR
  bio : TEXT
  avg_rating : NUMERIC
  rating_count : INTEGER
  completed_rides_count : INTEGER
  no_show_count : INTEGER
  email_verified_at : TIMESTAMP
  phone_verified_at : TIMESTAMP
  last_active_at : TIMESTAMP
  user_status_id : INTEGER <<FK>>
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
  deleted_at : TIMESTAMP
}

entity "cars" as CARS {
  *id : UUID
  --
  owner_id : UUID <<FK>>
  model_id : INTEGER <<FK>>
  spz : VARCHAR
  country_code : VARCHAR
  color : VARCHAR
  seats_total : INTEGER
  is_active : BOOLEAN
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
  deleted_at : TIMESTAMP
}

entity "rides" as RIDES {
  *id : UUID
  --
  driver_id : UUID <<FK>>
  car_id : UUID <<FK>>
  departure_at : TIMESTAMP
  arrival_estimate_at : TIMESTAMP
  ride_status_id : INTEGER <<FK>>
  origin_stop_id : UUID <<FK>>
  destination_stop_id : UUID <<FK>>
  origin_city : VARCHAR
  destination_city : VARCHAR
  origin_country_code : VARCHAR
  destination_country_code : VARCHAR
  origin_lat : NUMERIC
  origin_lng : NUMERIC
  destination_lat : NUMERIC
  destination_lng : NUMERIC
  available_seats_cached : INTEGER
  currency : VARCHAR
  description : TEXT
  instant_booking_enabled : BOOLEAN
  luggage_allowed : BOOLEAN
  pets_allowed : BOOLEAN
  smoking_allowed : BOOLEAN
  women_only : BOOLEAN
  max_two_backseat : BOOLEAN
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
  deleted_at : TIMESTAMP
}

entity "ride_stops" as RIDE_STOPS {
  *id : UUID
  --
  ride_id : UUID <<FK>>
  address : VARCHAR
  city : VARCHAR
  country_code : VARCHAR
  lat : NUMERIC
  lng : NUMERIC
  stop_order : INTEGER
  planned_arrival_at : TIMESTAMP
  planned_departure_at : TIMESTAMP
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
}

entity "prices" as PRICES {
  *id : UUID
  --
  ride_id : UUID <<FK>>
  start_stop_id : UUID <<FK>>
  end_stop_id : UUID <<FK>>
  start_stop_order : INTEGER
  end_stop_order : INTEGER
  amount : NUMERIC
  currency : VARCHAR
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
}

entity "bookings" as BOOKINGS {
  *id : UUID
  --
  passenger_id : UUID <<FK>>
  ride_id : UUID <<FK>>
  pickup_stop_id : UUID <<FK>>
  dropoff_stop_id : UUID <<FK>>
  pickup_order : INTEGER
  dropoff_order : INTEGER
  seat_count : INTEGER
  booking_status_id : INTEGER <<FK>>
  price_amount : NUMERIC
  currency : VARCHAR
  confirmed_at : TIMESTAMP
  cancelled_at : TIMESTAMP
  cancelled_by_user_id : UUID <<FK>>
  cancellation_reason : TEXT
  no_show_marked_at : TIMESTAMP
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
  deleted_at : TIMESTAMP
}

entity "reviews" as REVIEWS {
  *id : UUID
  --
  ride_id : UUID <<FK>>
  author_id : UUID <<FK>>
  subject_id : UUID <<FK>>
  rating : INTEGER
  comment : TEXT
  review_status_id : INTEGER <<FK>>
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
}

entity "conversations" as CONVERSATIONS {
  *id : UUID
  --
  ride_id : UUID <<FK>>
  booking_id : UUID <<FK>>
  conversation_type_id : INTEGER <<FK>>
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
  deleted_at : TIMESTAMP
}

entity "conversation_participants" as CONVERSATION_PARTICIPANTS {
  *id : UUID
  --
  conversation_id : UUID <<FK>>
  user_id : UUID <<FK>>
  joined_at : TIMESTAMP
  last_read_at : TIMESTAMP
  is_muted : BOOLEAN
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
}

entity "messages" as MESSAGES {
  *id : UUID
  --
  conversation_id : UUID <<FK>>
  sender_id : UUID <<FK>>
  message_type_id : INTEGER <<FK>>
  content : TEXT
  sent_at : TIMESTAMP
  edited_at : TIMESTAMP
  deleted_at : TIMESTAMP
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
}

entity "notifications" as NOTIFICATIONS {
  *id : UUID
  --
  user_id : UUID <<FK>>
  notification_type_id : INTEGER <<FK>>
  reference_entity_type : VARCHAR
  reference_entity_id : UUID
  title : VARCHAR
  body : TEXT
  delivery_status_id : INTEGER <<FK>>
  read_at : TIMESTAMP
  sent_at : TIMESTAMP
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
}

entity "user_status_history" as USER_STATUS_HISTORY {
  *id : UUID
  --
  user_id : UUID <<FK>>
  old_status_id : INTEGER <<FK>>
  new_status_id : INTEGER <<FK>>
  changed_by_user_id : UUID <<FK>>
  reason : TEXT
  created_at : TIMESTAMP
}

entity "ride_status_history" as RIDE_STATUS_HISTORY {
  *id : UUID
  --
  ride_id : UUID <<FK>>
  old_status_id : INTEGER <<FK>>
  new_status_id : INTEGER <<FK>>
  changed_by_user_id : UUID <<FK>>
  reason : TEXT
  created_at : TIMESTAMP
}

entity "booking_status_history" as BOOKING_STATUS_HISTORY {
  *id : UUID
  --
  booking_id : UUID <<FK>>
  old_status_id : INTEGER <<FK>>
  new_status_id : INTEGER <<FK>>
  changed_by_user_id : UUID <<FK>>
  reason : TEXT
  created_at : TIMESTAMP
}

entity "user_statuses" as USER_STATUSES {
  *id : INTEGER
  --
  code : VARCHAR
  label : VARCHAR
}

entity "ride_statuses" as RIDE_STATUSES {
  *id : INTEGER
  --
  code : VARCHAR
  label : VARCHAR
}

entity "booking_statuses" as BOOKING_STATUSES {
  *id : INTEGER
  --
  code : VARCHAR
  label : VARCHAR
}

entity "review_statuses" as REVIEW_STATUSES {
  *id : INTEGER
  --
  code : VARCHAR
  label : VARCHAR
}

entity "conversation_types" as CONVERSATION_TYPES {
  *id : INTEGER
  --
  code : VARCHAR
  label : VARCHAR
}

entity "message_types" as MESSAGE_TYPES {
  *id : INTEGER
  --
  code : VARCHAR
  label : VARCHAR
}

entity "notification_types" as NOTIFICATION_TYPES {
  *id : INTEGER
  --
  code : VARCHAR
  label : VARCHAR
}

entity "notification_delivery_statuses" as NOTIFICATION_DELIVERY_STATUSES {
  *id : INTEGER
  --
  code : VARCHAR
  label : VARCHAR
}

entity "car_models" as CAR_MODELS {
  *id : INTEGER
  --
  brand : VARCHAR
  model_name : VARCHAR
}

USER_STATUSES ||--o{ USERS
USERS ||--o{ CARS
CAR_MODELS ||--o{ CARS

USERS ||--o{ RIDES
CARS ||--o{ RIDES
RIDE_STATUSES ||--o{ RIDES

RIDES ||--o{ RIDE_STOPS
RIDE_STOPS }o--|| RIDES : origin_stop
RIDE_STOPS }o--|| RIDES : destination_stop

RIDES ||--o{ PRICES
RIDE_STOPS ||--o{ PRICES : start_stop
RIDE_STOPS ||--o{ PRICES : end_stop

USERS ||--o{ BOOKINGS : passenger
RIDES ||--o{ BOOKINGS
RIDE_STOPS ||--o{ BOOKINGS : pickup_stop
RIDE_STOPS ||--o{ BOOKINGS : dropoff_stop
BOOKING_STATUSES ||--o{ BOOKINGS
USERS |o--o{ BOOKINGS : cancelled_by

RIDES ||--o{ REVIEWS
USERS ||--o{ REVIEWS : author
USERS ||--o{ REVIEWS : subject
REVIEW_STATUSES ||--o{ REVIEWS

RIDES ||--o{ CONVERSATIONS
BOOKINGS ||--o{ CONVERSATIONS
CONVERSATION_TYPES ||--o{ CONVERSATIONS

CONVERSATIONS ||--o{ CONVERSATION_PARTICIPANTS
USERS ||--o{ CONVERSATION_PARTICIPANTS

CONVERSATIONS ||--o{ MESSAGES
USERS ||--o{ MESSAGES
MESSAGE_TYPES ||--o{ MESSAGES

USERS ||--o{ NOTIFICATIONS
NOTIFICATION_TYPES ||--o{ NOTIFICATIONS
NOTIFICATION_DELIVERY_STATUSES ||--o{ NOTIFICATIONS

USERS ||--o{ USER_STATUS_HISTORY
USER_STATUSES ||--o{ USER_STATUS_HISTORY : old_status
USER_STATUSES ||--o{ USER_STATUS_HISTORY : new_status
USERS |o--o{ USER_STATUS_HISTORY : changed_by

RIDES ||--o{ RIDE_STATUS_HISTORY
RIDE_STATUSES ||--o{ RIDE_STATUS_HISTORY : old_status
RIDE_STATUSES ||--o{ RIDE_STATUS_HISTORY : new_status
USERS |o--o{ RIDE_STATUS_HISTORY : changed_by

BOOKINGS ||--o{ BOOKING_STATUS_HISTORY
BOOKING_STATUSES ||--o{ BOOKING_STATUS_HISTORY : old_status
BOOKING_STATUSES ||--o{ BOOKING_STATUS_HISTORY : new_status
USERS |o--o{ BOOKING_STATUS_HISTORY : changed_by
@enduml